fixed favorite stars not showing in other screens

--- a/frontend/src/About/About.css
+++ b/frontend/src/About/About.css
@@ -1,6 +1,8 @@
 
 .about-us{
-    padding: 8px;
+    margin-top: 10rem;
+    display: inline-block;
+    width: 100%;
 }
 
 .column {
